# denon-plex-webui

./: .gitignore  README.md  index.html  main.js  package-lock.json  package.json  startAppAndServer.bat  vite.config.js  webpack.config.js
src/: App.js  App.jsx  client-ipc.js  client-preload.js  connect.js  index.css  index.js  index.jsx  search.js  server-ipc.js  server.js  store.js  tauri-handler.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: connection.rs  heos_structs.rs  lib.rs  main.rs  reply_service.rs  search.rs
src/components/: AddPlaylistItemsMenu.js  AddPlaylistItemsMenu.jsx  AddQueueMenu.js  AddQueueMenu.jsx  Connection.js  Connection.jsx  Container.js  Container.jsx  Containers.js  Containers.jsx  ContextMenu.js  ContextMenu.jsx  CurrentQueueItem.js  CurrentQueueItem.jsx  EditPlaylistMenu.js  EditPlaylistMenu.jsx  Notification.css  Notification.js  Notification.jsx  PlayableContainer.js  PlayableContainer.jsx  Playbar.js  Playbar.jsx  PlaylistItem.js  PlaylistItem.jsx  Queue.js  Queue.jsx  QueueItem.css  QueueItem.js  QueueItem.jsx  SavedPlaylists.js  SavedPlaylists.jsx  Settings.js  Settings.jsx
src/reducers/: infoSlice.js  infoSlice.jsx  notificationSlice.js  playerSlice.jsx  playlistsSlice.jsx  queueSlice.js
src/services/: commands.js
src/utils/: convertTime.js  eventTypes.js  findImg.js  playerStates.js  songEqual.js  sourceIdTypes.js
