[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.4", features = [] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
ssdp-client = "1.0.0"
futures = "0.3.21"
regex = "1.5.4"
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
tauri = { version = "1.0.0-rc.4", features = ["api-all"] }
tokio-serde = { version = "0.8", features = ["json"] }
tokio-util = { version = "0.7.0", features = ["codec"] }
local-ip-address = "0.4.4"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

